--- a/colors.html
+++ b/colors.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="user-scalable=no">
 	<title>Colors for someone little</title>
-	<link rel="stylesheet" href="css/color.css">
+	<link rel="stylesheet" href="css/colors.css">
 </head>
 <body>
 	<div class="current"></div>
@@ -14,6 +14,6 @@
 		<div class="color"></div>		
 	</div>
 
-	<script src="colors.js"></script>
+	<script src="js/colors.js"></script>
 </body>
 </html>
