--- a/colors.html
+++ b/colors.html
@@ -13,6 +13,8 @@
 		<div class="color"></div>
 		<div class="color"></div>		
 	</div>
+	<div class="message"></div>
+	<div class="next">Next</div>
 
 	<script src="js/colors.js"></script>
 </body>
