fixed bug whith arrow

--- a/colors.html
+++ b/colors.html
@@ -14,7 +14,7 @@
 		<div class="color"></div>		
 	</div>
 	<div class="message"></div>
-	<div class="next">Next</div>
+	<div class="next"><p>Next</p></div>
 
 	<script src="js/colors.js"></script>
 </body>
