--- a/colors.html
+++ b/colors.html
@@ -15,6 +15,7 @@
 	</div>
 	<div class="message"></div>
 	<div class="next"><p>Next</p></div>
+	<button class="exit"><p>Exit</p></button>
 
 	<script src="js/colors.js"></script>
 </body>
